# generative-model-chat-topic-evolution

./: README.md  pyproject.toml
notes/: 1_genetic_traits_and_polarity.ipynb  2_sentence_generation.ipynb  3_conversation_phase.ipynb  4_cultural_trait_transmission_phase.ipynb  5_experiments.ipynb  torus_space.ipynb
