[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["yoshino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.7"
sentence-transformers = "^2.2.2"
umap-learn = "^0.5.4"
matplotlib = "^3.8.0"
japanize-matplotlib = "^1.1.3"
llama-cpp-python = "^0.2.11"
mecab-python3 = "^1.0.8"
unidic-lite = "^1.0.8"
pke = {git = "https://github.com/boudinfl/pke.git"}
ginza = "^5.1.3"
nltk = "^3.8.1"
ja-ginza = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
